welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:7: error: type mismatch;
 found   : Unit
 required: Int
}else {
      ^